@@ -1,3 +1,10 @@
+2002-07-04  Jonathan Larmour  <jlarmour@redhat.com>
+
+	* src/dhcp_prot.c (_dhcp_copy): Remove. Unnecessary as we can never
+	receive a packet longer than sizeof(struct bootp)
+	(do_dhcp): Also set giaddr to 0 before sends.
+	Verify length of received packets, especially to check for truncation.
+
 2002-06-20  Gary Thomas  <gary@chez-thomas.org>
 
 	* src/inet_ntop.c: Fix build error when used with newer compilers.
